--- a/src/styles.css
+++ b/src/styles.css
@@ -11,9 +11,9 @@
 {
     --transition: all ease .4s;
 
-    --darkLight: #4d4d4d;
-    --dark: #151515;
-    --darkDark: #000;
+    --darkLight: #454752;
+    --dark: #1d1e23;
+    --darkDark: #08090a;
 
     --lightLight: #fff;
     --light: #f4f4f4;
@@ -32,17 +32,17 @@
 
 ::-webkit-scrollbar-track
 {
-    background: var(--dark); 
+    background: var(--dark);
 }
 
 ::-webkit-scrollbar-thumb
 {
-    background: var(--lightDark); 
+    background: var(--lightDark);
 }
 
 ::-webkit-scrollbar-thumb:hover
 {
-    background: var(--lightLight); 
+    background: var(--lightLight);
 }
 
 *,
@@ -121,6 +121,7 @@ app-root
     font-family: var(--poppins);
     font-weight: 600;
     border: 2px solid var(--light);
+    border-radius: 200px;
     position: relative;
     background: transparent;
     color: var(--light);
@@ -276,8 +277,9 @@ app-root
     position: absolute;
     top: 38px;
     height: 2px;
-    left: 0;
+    left: 45px;
     right: 0;
+    z-index: 1;
     background: var(--lightLight);
 }
 
@@ -289,9 +291,10 @@ app-root
     color: var(--dark);
     display: flex;
     height: 40px;
-    padding: 0 20px;
+    padding: 0 25px;
     font-weight: 500;
     font-size: 1.1em;
+    border-radius: 0 200px;
     font-family: var(--poppins);
     align-items: center;
 }
@@ -317,7 +320,9 @@ app-root
 
 * + .ntOptionButton
 {
-    margin-left: -2px;
+    margin-left: 16px;
+    border-radius: 200px;
+    border-color: transparent var(--light);
 }
 
 .ntOptionButton:hover,
@@ -339,10 +344,12 @@ app-root
     content: '';
     background: var(--dark);
     position: absolute;
-    top: 70%;
+    top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    border-radius: 200px;
+    transform: scale(0);
 }
 
 .ntOptionButton:hover:before,
@@ -350,7 +357,7 @@ app-root
 {
     transition: var(--transition);
     background: var(--lightLight);
-    top: 7.5%;
+    transform: scale(.9);
 }
 
 .ntBlockList
@@ -383,11 +390,12 @@ app-root
     pointer-events: none;
     opacity: 0;
     left: 0;
-    top: -20%;
+    top: 0;
     right: 0;
-    bottom: 20%;
-    background: var(--dark);
+    bottom: 0;
     z-index: 9001;
+    background-color: rgba(0, 0, 0, .67);
+    backdrop-filter: blur(5px);
 }
 
 .ntPopup.visible
@@ -425,6 +433,12 @@ app-root
     border-color: var(--lightLight);
 }
 
+.visible .ntPopupBody
+{
+    margin-left: 0;
+    opacity: 1;
+}
+
 .ntPopupBody
 {
     transition: var(--transition);
@@ -435,9 +449,11 @@ app-root
     display: flex;
     max-width: 520px;
     padding: 20px 30px;
+    margin-left: -520px;
+    opacity: 0;
     overflow-x: hidden;
     overflow-y: auto;
-    margin: 0 auto;
+    margin-right: auto;
     flex-wrap: wrap;
     flex-flow: wrap;
     align-items: center;
@@ -491,11 +507,12 @@ app-root
     font-size: 12px;
     font-family: var(--poppins);
     line-height: 1;
-    padding: 4px 8px;
+    padding: 4px 16px;
     color: var(--dark);
     background: var(--lightLight);
     margin-bottom: -2px;
     position: relative;
+    border-radius: 12px 12px 0 0;
 }
 
 .ntPopupLabel:after
@@ -540,6 +557,7 @@ app-root
     outline: none;
     position: relative;
     z-index: 1;
+    border-radius: 0 200px 200px;
 }
 
 .ntPopupInput.ng-invalid
@@ -569,6 +587,7 @@ app-root
     border: 2px solid var(--lightLight);
     background: var(--dark);
     cursor: pointer;
+    border-radius: 200px;
 }
 
 .ntPopupButton:hover,
@@ -629,6 +648,7 @@ app-root
 
 .ntStreamPreviewImage
 {
+    transition: all ease .2s;
     position: absolute;
     top: 0;
     left: 0;
@@ -637,27 +657,56 @@ app-root
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    border-radius: 15px;
+    box-shadow: 0 3px 10px 0px rgba(123, 123, 123, 0), 0 0 5px -1px transparent;
+}
+
+.ntStreamPreview:hover .ntStreamPreviewImage
+{
+    box-shadow: 0 3px 10px 0px rgba(123, 123, 123, 0.8), 0 0 5px -1px var(--light);
 }
 
 .ntstreamInfoOverlay
 {
+    pointer-events: none;
     position: absolute;
-    top: -10px;
-    left: 1vw;
-    right: 1vw;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .6vw;
+    background: linear-gradient(180deg, rgba(0, 0, 0, .5) 0%, transparent 80%);
+    border-radius: 15px 15px 0 0;
+}
+
+.ntStreamerInfo
+{
+    display: flex;
+    align-items: center;
 }
 
 .ntStreamerLogo
 {
     --iconSize: 45px;
-    --borderSize: 2px;
+    --borderSize: 0px;
     width: calc(var(--iconSize) + var(--borderSize) * 2);
     height: calc(var(--iconSize) + var(--borderSize) * 2);
     background-size: cover;
-    border: var(--borderSize) solid var(--lightLight);
+    /* border: var(--borderSize) solid var(--lightLight); */
+    border-radius: 200px;
     display: inline-block;
     vertical-align: bottom;
     margin-right: 10px;
+    z-index: 1;
+    position: relative;
+}
+
+.ntStreamerLogo.drop {
+    position: absolute;
+    top: .6vw;
+    left: .6vw;
+    filter: blur(4px);
+    top: calc(.6vw + 3.5%);
+    z-index: 0;
 }
 
 .ntStreamerDisplayName
@@ -683,6 +732,7 @@ app-root
     color: var(--dark);
     font-size: 12px;
     text-align: center;
+    border-radius: 15px;
 }
 
 .ntStreamPreview:hover .ntStreamInfo
@@ -746,6 +796,7 @@ app-root
     cursor: pointer;
     user-select: none;
     outline: none;
+    border-radius: 200px;
 }
 
 .ntStreamPopup:hover,
@@ -790,6 +841,7 @@ app-root
     background: var(--dark);
     overflow: hidden;
     text-decoration: none;
+    border-radius: 200px;
 }
 
 .ntBookmark:hover
@@ -824,6 +876,23 @@ app-root
 {
     font-size: 16px;
     font-weight: 200;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.ntBookmarkTitle img
+{
+    display: none;
+}
+
+.ntBookmarkTitle img.visible
+{
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
 }
 
 .ntBookmarkLink
@@ -871,18 +940,20 @@ app-root
 .ntBookmarkOptionButton
 {
     transition: var(--transition);
-    background-color: var(--dark);
+    background: none;
     color: var(--lightLight);
-    border: 2px solid var(--lightLight);
-    width: 25px;
-    height: 25px;
+    border: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0;
+    height: 36px;
+    width: 36px;
+    line-height: 1;
+    border-radius: 200px;
     padding: 0;
     outline: none;
-    font-size: 12px;
+    font-size: 18px;
     user-select: none;
     cursor: pointer;
 }
@@ -923,8 +994,8 @@ app-root
 */
 body.bright
 {
-    
-    --darkLight: #fff; 
+
+    --darkLight: #fff;
     --dark: #f4f4f4;
     --darkDark: #eaeaea;
 
